# Teebuilder

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  zepter.yaml
crates/bid-scraper/: Cargo.toml  README.md  config.toml  relays.json
crates/bid-scraper/pkg/debian/: bid-scraper.service
crates/bid-scraper/pkg/etc/: config.toml
crates/bid-scraper/src/: best_bid_ws_connector.rs  bid_scraper.rs  bid_scraper_client.rs  bid_sender.rs  bids_publisher.rs  bloxroute_ws_publisher.rs  config.rs  headers_publisher.rs  lib.rs  reconnect.rs  relay_api_publisher.rs  slot.rs  ultrasound_ws_publisher.rs  ws_publisher.rs
crates/bid-scraper/src/types/: bid.rs  bid_update.rs  mod.rs
crates/eth-sparse-mpt/: Cargo.toml  README.md
crates/eth-sparse-mpt/benches/: trie_do_bench.rs  trie_example_bench.rs  trie_insert_bench.rs  trie_nodes_benches.rs
crates/eth-sparse-mpt/src/: lib.rs  test_utils.rs  utils.rs
crates/eth-sparse-mpt/src/v1/: mod.rs
crates/eth-sparse-mpt/src/v1/reth_sparse_trie/: change_set.rs  hash.rs  mod.rs  shared_cache.rs
crates/eth-sparse-mpt/src/v1/sparse_mpt/: fixed_trie.rs
crates/eth-sparse-mpt/src/v2/: fetch.rs  mod.rs
crates/eth-sparse-mpt/src/v2/trie/: mod.rs  proof_store.rs  tests.rs
crates/eth-sparse-mpt/test_data/: README.md
crates/rbuilder/: Cargo.toml  build.rs
crates/rbuilder-config/: Cargo.toml
crates/rbuilder-config/src/: env_or_value.rs  lib.rs  logger.rs
crates/rbuilder-operator/: Cargo.toml  build.rs
crates/rbuilder-operator/pkg/debian/: rbuilder-operator.service
crates/rbuilder-operator/pkg/etc/: config.toml
crates/rbuilder-operator/src/: build_info.rs  clickhouse.rs  flashbots_config.rs  flashbots_signer.rs  lib.rs  metrics.rs  signed_http_client.rs
crates/rbuilder-operator/src/bidding_service_wrapper/: bidding_service.rs  conversion.rs  mod.rs
crates/rbuilder-operator/src/bidding_service_wrapper/client/: bidding_service_client_adapter.rs  mod.rs  unfinished_block_building_sink_client.rs
crates/rbuilder-operator/src/bidding_service_wrapper/fast_streams/: helpers.rs  mod.rs  subscriber_poller.rs  types.rs
crates/rbuilder-operator/src/bidding_service_wrapper/proto/: bidding_service.proto
crates/rbuilder-operator/src/true_block_value_push/: best_true_value_observer.rs  best_true_value_pusher.rs  blocks_processor_backend.rs  mod.rs  redis_backend.rs
crates/rbuilder-primitives/: Cargo.toml
crates/rbuilder-primitives/benches/: sha_pair.rs  ssz_proof.rs
crates/rbuilder-primitives/src/: built_block.rs  evm_inspector.rs  fmt.rs  lib.rs  order_builder.rs  order_statistics.rs  serialize.rs  test_data_generator.rs
crates/rbuilder-primitives/src/mev_boost/: adjustment.rs  mod.rs  optimistic_v3.rs  ssz_roots.rs  submit_block.rs  submit_header.rs
crates/rbuilder-rebalancer/: Cargo.toml  README.md
crates/rbuilder-rebalancer/pkg/debian/: rbuilder-rebalancer.service
crates/rbuilder-rebalancer/pkg/etc/: config.toml
crates/rbuilder-rebalancer/src/: config.rs  lib.rs  rebalancer.rs
crates/rbuilder-utils/: Cargo.toml
crates/rbuilder-utils/src/: backoff.rs  lib.rs
crates/rbuilder-utils/src/clickhouse/: indexer.rs  mod.rs  serde.rs
crates/rbuilder-utils/src/clickhouse/backup/: metrics.rs  mod.rs  primitives.rs
crates/rbuilder-utils/src/format/: mod.rs
crates/rbuilder-utils/src/metrics/: mod.rs
crates/rbuilder-utils/src/serde/: mod.rs
crates/rbuilder/benches/benchmarks/: mev_boost.rs  txpool_fetcher.rs
crates/rbuilder/proto/: bloxroute.proto
crates/rbuilder/src/: lib.rs
crates/rbuilder/src/backtest/: backtest_build_range.rs  execute.rs  full_slot_block_data.rs  mod.rs  results_store.rs  store.rs
crates/rbuilder/src/backtest/build_block/: backtest_build_block.rs  full_partial_block_execution_tracer.rs  landed_block_from_db.rs  mod.rs  synthetic_orders.rs
crates/rbuilder/src/backtest/fetch/: backtest_fetch.rs  data_source.rs  mempool.rs  mev_boost.rs  mod.rs
crates/rbuilder/src/backtest/redistribute/: mod.rs  redistribution_algo.rs
crates/rbuilder/src/backtest/restore_landed_orders/: find_landed_orders.rs  resim_landed_block.rs
crates/rbuilder/src/beacon_api_client/: mod.rs
crates/rbuilder/src/building/: bid_adjustments.rs  built_block_trace.rs  cached_reads.rs  conflict.rs  evm.rs  fmt.rs  mod.rs  order_commit.rs  payout_tx.rs  precompile_cache.rs  sim.rs  tracers.rs
crates/rbuilder/src/building/block_orders/: mod.rs  multi_share_bundle_merger.rs  order_dumper.rs  order_priority.rs  prioritized_order_store.rs  share_bundle_merger.rs  test_context.rs  test_data_generator.rs
crates/rbuilder/src/building/builders/: block_building_helper.rs  block_building_helper_stats_logger.rs  mock_block_building_helper.rs  mod.rs  ordering_builder.rs
crates/rbuilder/src/building/testing/: test_chain_state.rs
crates/rbuilder/src/building/tx_sim_cache/: evm_db.rs  mod.rs  result_store.rs
crates/rbuilder/src/integration/: playground.rs  simple.rs
crates/rbuilder/src/integration/test_data/: blocklist.json  config-playground-http-blocklist.toml  config-playground.toml
crates/rbuilder/src/live_builder/: base_config.rs  block_list_provider.rs  cli.rs  config.rs  mod.rs  process_killer.rs  wallet_balance_watcher.rs  watchdog.rs
crates/rbuilder/src/live_builder/block_output/: bid_observer.rs  mod.rs  (+6 more)
crates/rbuilder/src/mev_boost/: bloxroute_grpc.rs  error.rs  mod.rs  optimistic_v3.rs  rpc.rs  sign_payload.rs
crates/rbuilder/src/provider/: ipc_state_provider.rs  mod.rs  reth_prov.rs  state_provider_factory_from_provider_factory.rs
crates/rbuilder/src/roothash/: mod.rs  prefetcher.rs
crates/rbuilder/src/telemetry/: mod.rs
crates/rbuilder/src/utils/: bls.rs  build_info.rs  constants.rs  error_storage.rs  mevblocker.rs  mod.rs  noncer.rs  provider_factory_reopen.rs  provider_head_state.rs  receipts.rs  sync.rs  test_utils.rs  tx_signer.rs
crates/reth-rbuilder/: Cargo.toml
crates/reth-rbuilder/src/: main.rs
crates/sysperf/: Cargo.toml
crates/sysperf/src/: lib.rs
crates/test-relay/: Cargo.toml  README.md
crates/test-relay/src/: main.rs  metrics.rs  relay.rs  validation_api_client.rs
(+66 files in other folders)
