[package]
name = "eth-sparse-mpt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
thiserror = "1.0.61"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.9.0"
rustc-hash = "2.0.0"
rayon = "1.10.0"
smallvec = "1.13.2"
alloy-trie.workspace = true
nybbles = { version = "0.3.3", features = ["serde"] }

tracing.workspace = true

# reth
reth-errors.workspace = true
reth-execution-errors.workspace = true
reth-trie.workspace = true
reth-trie-db.workspace = true
reth-provider.workspace = true

# revm
revm.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# other
parking_lot.workspace = true
eyre = { workspace = true }
arrayvec = "0.7.6"
dashmap = { version = "6.1.0", features = ["rayon"] }

# test deps
hash-db = { version = "0.15.2", optional = true }
triehash = { version = "0.8.4", optional = true }
flate2 = { workspace = true, optional = true }

[features]
benchmark-utils = ["dep:hash-db", "dep:triehash", "dep:flate2"]

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
rand = { workspace = true, features = ["small_rng"] }
proptest.workspace = true
eth-sparse-mpt = { path = ".", features = ["benchmark-utils"] }

[[bench]]
name = "trie_insert_bench"
harness = false

[[bench]]
name = "trie_nodes_benches"
harness = false

[[bench]]
name = "trie_example_bench"
harness = false

[[bench]]
name = "trie_do_bench"
harness = false

