[package]
name = "rbuilder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbuilder-primitives.workspace = true
rbuilder-config.workspace = true

serde = { workspace = true }
derive_more = { workspace = true }
serde_json = { workspace = true }
tokio.workspace = true
tokio-stream.workspace = true
tokio-util = { workspace = true }
eyre.workspace = true
thiserror.workspace = true
reth.workspace = true
reth-db.workspace = true
reth-errors.workspace = true
reth-payload-builder.workspace = true
reth-trie.workspace = true
reth-trie-parallel.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-primitives.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
revm.workspace = true
revm-inspectors.workspace = true
reth-node-ethereum.workspace = true

alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-chains.workspace = true
alloy-evm.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-network-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
alloy-signer-local.workspace = true
alloy-eips.workspace = true
alloy-trie.workspace = true

ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true

test_utils = { path = "src/test_utils" }
metrics_macros = { path = "src/telemetry/metrics_macros" }

reqwest = { workspace = true, features = ["blocking"] }
serde_with = { workspace = true, features = ["time_0_3"] }
url.workspace = true
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "sqlite",
    "chrono",
    "bigdecimal",
    "time",
    "uuid",
] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
futures.workspace = true
time.workspace = true
bigdecimal = "0.4.1"
mempool-dumpster = "0.1.1"
itertools = "0.11.0"
clap.workspace = true
priority-queue = "2.0.3"
secp256k1 = { workspace = true, features = [
    "global-context",
    "std",
    "recovery",
] }
rayon = "1.8.0"
flate2.workspace = true
# Version required by ethereum-consensus beacon-api-client
mev-share-sse.workspace = true
beacon-api-client.workspace = true
ethereum-consensus.workspace = true
jsonrpsee = { version = "0.20.3", features = ["full"] }
uuid.workspace = true
prometheus.workspace = true
warp.workspace = true
lazy_static.workspace = true
ctor.workspace = true
toml.workspace = true
ahash.workspace = true
rand.workspace = true
lru = "0.12.1"
flume = "0.11.0"
crossbeam-queue = "0.3.10"
integer-encoding = "4.0.0"
sha2.workspace = true
lz4_flex = "0.11.2"
exponential-backoff.workspace = true
governor = "0.6.3"
derivative.workspace = true
mockall = "0.12.1"
shellexpand = "3.1.0"
async-trait = "0.1.80"
eth-sparse-mpt.workspace = true
bid-scraper.workspace = true
sysperf.workspace = true
crossbeam = "0.8.4"
parking_lot.workspace = true
dashmap = "6.1.0"
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
bincode = "1.3"
schnellru = "0.2.4"

# IPC state provider deps
reipc = { git = "https://github.com/nethermindeth/reipc.git", rev = "b0b70735cda6273652212d1591188642e3449ed7" }

quick_cache = "0.6.11"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"


[build-dependencies]
built = { version = "0.7.1", features = ["git2", "chrono"] }
tonic-build = "0.13"

[dev-dependencies]
reth-db-common.workspace = true
alloy-node-bindings.workspace = true
foldhash = "0.1.3"
tempfile = "3.8"
assert_matches = "1.5.0"
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }

[features]
# TODO: remove?
optimism = []
redact-sensitive = []
jemalloc-unprefixed = ["tikv-jemallocator/unprefixed_malloc_on_supported_platforms"]

[[bench]]
name = "bench_main"
harness = false
