[package]
name = "reth-rbuilder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rbuilder.workspace = true
rbuilder-config.workspace = true

reth.workspace = true
reth-node-ethereum.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-cli-util.workspace = true
alloy-rlp.workspace = true

tokio.workspace = true
tokio-util.workspace = true
clap.workspace = true
eyre.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }
libc.workspace = true

[features]
jemalloc = [
	"reth-cli-util/jemalloc"
]
