[package]
name = "sysperf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true

rand.workspace = true
rayon = "1.8"
num_cpus = "1.16"
sysinfo = "0.33.0"